# kimfame

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
kimfame/: aaa.py  bbb.py  ddd.py  eee.py  kimfame.py
src/kimfame/: __init__.py  aaa.py  ccc.py  kimfame.py
